<resources>
    <string name="app_name">My Avatar</string>
    <string name="btn_aceptar">Ok</string>
    <string name="btn_cancelar">Cancel</string>
    <string name="btn_crear"> Create</string>
    <string name="dlg_guardado">Saved Data</string>
    <string name="dlg_cancelado">cancel</string>
    <string name="dlg_crear"> Create Avatar</string>

    <string name="txtNombre">Name</string>crear
    <string name="txtSexo">Sex</string>
    <string name="txtRaza">Species</string>
    <string name="txtProfesion">Profesion</string>
    <string name="rdHombre">Men</string>
    <string name="rdMujer">Women</string>

    <string name="lblEspecie">"Species:"</string>
    <string-array name="despegableEspecie">
        <item>Human</item>
        <item>Elf</item>
        <item>Dwarf</item>
        <item>Hobbit</item>
    </string-array>

    <string name="lblProfecion">Profesion:</string>
    <string-array name="despegableProfesion">
        <item>Archer</item>
        <item>Warrior</item>
        <item>Mage</item>
        <item>Blacksmith</item>
        <item>Miner</item>
    </string-array>
    <string name="txtVida">Life</string>
    <string name="txtMagia">Magic</string>
    <string name="txtFuerza">Streng</string>
    <string name="txtVelocidad">Speed</string>

</resources>