<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="199dp"
        android:layout_height="336dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036">

        <TextView
            android:id="@+id/lblNombre"
            style="@style/lblPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre" />

        <EditText
            android:id="@+id/txtNombre"
            style="@style/txtPrimario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblSexo"
            style="@style/lblPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSexo" />

        <EditText
            android:id="@+id/txtSexo"
            style="@style/txtPrimario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblEspecie"
            style="@style/lblPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRaza" />

        <EditText
            android:id="@+id/txtEspecie"
            style="@style/txtPrimario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblProfesion"
            style="@style/lblPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtProfesion" />

        <EditText
            android:id="@+id/txtProfesion"
            style="@style/txtPrimario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="177dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            tools:srcCompat="@drawable/sinidentificar" />

        <ImageView
            android:id="@+id/imgProfesion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@drawable/sin_definir" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="198dp"
        android:layout_height="282dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.07">

        <TextView
            android:id="@+id/lblVida"
            style="@style/lblSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtVida" />

        <EditText
            android:id="@+id/txtVida"
            style="@style/txtSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblMagia"
            style="@style/lblSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMagia" />

        <EditText
            android:id="@+id/txtMagia"
            style="@style/txtSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="177dp"
        android:layout_height="282dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.07">


        <TextView
            android:id="@+id/lblFuerza"
            style="@style/lblSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFuerza" />

        <EditText
            android:id="@+id/txtFuerza"
            style="@style/txtSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblVelocidad"
            style="@style/lblSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtVelocidad" />

        <EditText
            android:id="@+id/txtVelocidad"
            style="@style/txtSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnCrear"
            style="@style/boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_crear" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>